--- a/Aula-04/cadastroTime/cadastroTime/pom.xml
+++ b/Aula-04/cadastroTime/cadastroTime/pom.xml
@@ -49,6 +49,13 @@
 			<version>8.0.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>6.1.3</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
